--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit>=1.30.0
-pandas>=2.0.3
-numpy>=1.24.3
-matplotlib>=3.7.2
-seaborn>=0.12.2
+streamlit==1.30.0
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
+seaborn==0.12.2
 scikit-learn==1.2.2
 xgboost==1.7.6
-joblib>=1.1.0
-imbalanced-learn>=0.10.1 
+joblib==1.1.0
+imbalanced-learn==0.10.1
+plotly==6.1.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+rich==14.0.0
+pygments==2.19.1 
