--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
-*.pth filter=lfs diff=lfs merge=lfs -text
-*.h5 filter=lfs diff=lfs merge=lfs -text
-*.csv filter=lfs diff=lfs merge=lfs -text
-*.xls filter=lfs diff=lfs merge=lfs -text
-preprocessed_data/*.* filter=lfs diff=lfs merge=lfs -text
-models/*.* filter=lfs diff=lfs merge=lfs -text
-models_current/*.* filter=lfs diff=lfs merge=lfs -text
-models_live/*.* filter=lfs diff=lfs merge=lfs -text 
+models_current/*.pkl filter=lfs diff=lfs merge=lfs -text
+preprocessed_data/*.pkl filter=lfs diff=lfs merge=lfs -text
+models/*.pkl filter=lfs diff=lfs merge=lfs -text 
