--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas>=2.0.3
 numpy>=1.24.3
 matplotlib>=3.7.2
 seaborn>=0.12.2
-scikit-learn==1.2.2
-xgboost==1.7.6
+scikit-learn==1.3.2
+xgboost==2.0.3
 joblib>=1.1.0
-imbalanced-learn>=0.10.1 
+imbalanced-learn==0.11.0 
