--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ seaborn>=0.12.2
 scikit-learn==1.3.2
 xgboost==2.0.3
 joblib>=1.1.0
-imbalanced-learn==0.11.0 
+imbalanced-learn==0.11.0
+plotly>=5.13.0 
